fixes spacing

--- a/src/components/molecules/FormAddOrder/FormAddOrder.css
+++ b/src/components/molecules/FormAddOrder/FormAddOrder.css
@@ -16,7 +16,7 @@ fieldset {
     height:43px;
     outline: 0;
     font-size: .8rem;
-    
+    cursor: pointer;
 }
 
 .checkbox-label {
@@ -33,7 +33,7 @@ fieldset {
     cursor:pointer;
     user-select: none;
     font-size:.9rem;
-    margin-bottom: 1rem;
+    
 }
 
 .checkbox-label.square {
@@ -52,7 +52,8 @@ fieldset {
     align-items: center;
     color: #585858;
     transition: all ease 100ms;
-    background-color: transparent;
+    background-color: transparent;  
+    pointer-events: none;
 }
 
 .main-input:valid, .main-input:focus {
