--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ body {
   display: none !important;
 }
 
+.mb-1 {
+  margin-bottom:1rem;
+}
+
 .bold {
   font-weight: bold;
 }
